chore(deps): update parent to 0.62.0
